crates/cosmon-cli/tests/snapshots/help__migrate_genre.snap
---
source: crates/cosmon-cli/tests/help_goldens.rs
expression: stdout
---
Apply a residence to every tracked path classified under a single genre (ADR-057 artifact-map). Composes artifact-map + git-side migration

Usage: cs migrate genre [OPTIONS] --to <RESIDENCE> <NAME>

Arguments:
  <NAME>
          Genre name (must match a `[<name>]` table in `.cosmon/artifact-map.toml`)

Options:
      --config <PATH>
          Path to the state directory (default: the galaxy's .cosmon/state/)

      --to <RESIDENCE>
          Target residence

          Possible values:
          - solo:      Solo — local, single operator. Writes the whole `.cosmon/` directory to `.git/info/exclude` (per-clone notebook, never pushed) and sweeps any legacy `.cosmon/` / `.worktrees/` lines from the tracked `.gitignore` (ADR-055 §3.1)
          - team:      Team — local, shared across operators via git. Appends `.cosmon/state/` to the tracked `.gitignore` (shared bulletin board) and untracks any previously committed state files. Structural files (config.toml, formulas/*.toml, surfaces.toml) stay trackable on `main`. Orphan-branch-based state sharing (`cosmon/state`) is the cosmon-le-repo backend target
          - encrypted: Encrypted — local, encrypted at rest. Same gitignore footprint as `team` today; the age-wrap backend (requires `age` on PATH and a `--recipient` key) is deferred to cosmon-le-repo
          - remote:    Remote — server-backed state accessed via network transport. Same gitignore footprint as `team`; the transport backend is not yet implemented (tracked by cosmon-le-repo)

      --scrub-history
          After the residence transition, invoke `cs git scrub-history --path <paths>` (when available) to rewrite prior commits that touched the matched paths.
          
          Soft dependency on `cs git scrub-history`. When the subcommand is not yet implemented, this flag degrades to a one-line warning and the migration still succeeds on the current tree.

  -v, --verbose
          Enable verbose output

      --json
          Output in JSON format

      --recipient <AGE_RECIPIENT>
          `age` recipient to wrap the narration for, when `--to encrypted` is set. Required for the encrypted path

      --dry-run
          Preview the plan without writing to disk or touching git

  -y, --yes
          Skip the interactive confirmation prompt

  -h, --help
          Print help (see a summary with '-h')
