crates/cosmon-cli/tests/snapshots/help__notarize_issue.snap
---
source: crates/cosmon-cli/tests/help_goldens.rs
expression: stdout
---
Issue a new seal — build the commitment, sign with Ed25519, write `mint.json`

Usage: cs notarize issue [OPTIONS] <MOLECULE_ID>

Arguments:
  <MOLECULE_ID>  Molecule ID (or prefix) to notarize

Options:
      --config <PATH>
          Path to the state directory (default: the galaxy's .cosmon/state/)
      --dry-run
          Skip signing — compute and print the commitment only. Default when `--key` is not provided
      --key <PATH>
          Path to an Ed25519 secret-key file (raw 32 bytes or 64-char lowercase hex). Required for a real notarization
  -v, --verbose
          Enable verbose output
      --cosmon-version <COSMON_VERSION>
          Override `cosmon_version` in the commitment (defaults to the crate-level `CARGO_PKG_VERSION`). Mostly useful for tests
      --json
          Output in JSON format
  -h, --help
          Print help
